# msc-thesis

ABC/Music-Abc-DT/: MANIFEST  MANIFEST.bak  MYMETA.yml
ABC/abc2perl/: abc2perl.c  areana.c  makefile  midi.c  midi.h  tclabc.c
ABC/abc2xml/: index.html
ABC/abc2xml_v47/: Changes.txt  Readme.txt  abc2xml.py
ABC/abcm2ps-7.3.4/: README  parse.c  tags
ABC/batclabc/: c2perl.c  main.c  makefile  tclabc.h
ABC/corpus/: bars.abc  components.abc  cup_of_tea.abc  fuga_bwv_578.abc  grace.abc  happy_birthday_it.abc  lengths.abc  microtones.abc  mrep.abc  notes.abc  simple.abc  slurs.abc  traditional_xmas.abc  traditional_xmas_1.abc  traditional_xmas_1_t.abc  traditional_xmas_1_v1.abc  traditional_xmas_1_v2.abc  traditional_xmas_1_v3.abc  traditional_xmas_1_v4.abc  tuplets.abc  voices.abc  vover.abc  x.abc
ABC/jjabcm2ps/: a.out  areana.h  c2perl.c  main2.c  makefile
ABC/tclabc-1.3.7/: Changes  Makefile.in  README  abcbarchk.in  abcparse.c  abctrans.in  change.c  change.tcl  config.h  config.h.in  configure  configure.ac  cscope.out  detail.tcl  front.c  help.tcl  index.html  instr.html  keyboard.html  keys.html  lang-de.tcl  lang-en.tcl  lang-fr-utf8.tcl  lang-fr.tcl  lang-nl.tcl  lang-ptBR.tcl  lang-se.tcl  mid2abc.in  pkgIndex.tcl.in  play.tcl  pref.tcl  select.tcl  tclabc.c  tclabc.html  tkabc.in  tkabc.tcl  tkabcrc  tkorgan.tcl  www.tcl
ABC/tclabc-1.3.7/songs/: christ_lag.abc  wtc1022.mid
ABC/tclabc-1.3.7/win32/: readme.txt  tclabc.dsp  tclabc.dsw
ABC/tools/: canon_abc  cat_abc  detect_errors_abc  makefile  (+4 more)
WIKI/: ABCDT.txt  ABC_Parsers_Analysis.txt  ABC_Tools.txt  Artigo.txt  Claims.txt  Estado_de_Arte.txt  Ferramentas_Externas.txt  Future_Work.txt  Home.txt  Links.txt  Papers.txt  Plano_de_Trabalhos.txt  Questions.txt  Relatório_Pré-Tese.txt  Tarefas.txt  Tese.txt  notebook.zim
artigo_slate/: article.tex  makefile
pretese/: Makefile  main.aux  main.run.xml  main.tex  thesis.sty
proposta/: AdmissaoDissertacaoMEI.odt  proposta.aux  proposta.bbl  proposta.bib  proposta.blg  proposta.tex
thesis/: Makefile  g1.dot  graphvizzz.sty  references.bib  thesis.sty  thesis.tex
(+254 files in other folders)
